fix line item not showing product
